k8s-manifests/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
    - port: 8080
      targetPort: 80
      name: web
  selector:
    app: web
  type: NodePort
#  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
#          image: dockersamples/wordsmith-web
          image: me-west1-docker.pkg.dev/akiva-ashkenazi/docker-repo/web-app:latest
          ports:
            - containerPort: 80
              name: web
